[gd_scene load_steps=3 format=3 uid="uid://bm8bnk2h1d81y"]

[ext_resource type="Script" uid="uid://b3bnvsw3oiodb" path="res://src/UI/level_up/upgrade_option_card/upgrade_option_card.gd" id="1_e5udj"]
[ext_resource type="Texture2D" uid="uid://i3vkrmhkaxkl" path="res://icon.svg" id="1_hvhkj"]

[node name="UpgradeOptionCard" type="Button"]
custom_minimum_size = Vector2(0, 100)
script = ExtResource("1_e5udj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TechniqueIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_hvhkj")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Unnamed Technique"

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(212, 0)
layout_mode = 2
text = "Placeholder Technique Description."
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 65

[node name="NewLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913306, 0.897861, 0.0701439, 1)
theme_override_font_sizes/font_size = 50
text = "æ–°!"
horizontal_alignment = 1
vertical_alignment = 1
